lolspeak.BNF
<lolspeak> 	    ::=	<noun_phrase> <verb> <noun_phrase>
<noun_phrase>	::=	<article> <adjective> <noun>
<verb>	 	    ::=	lovez  |  hatez  | ates
<noun>	 	    ::=	dawg  |  kat  |  rat
<article>	    ::=	a  | teh
<adjective>	    ::=	fat  | hungry | mean |happy
